--- a/overhaul folder/style.css
+++ b/overhaul folder/style.css
@@ -13,12 +13,45 @@ body{
     font-family: sans-serif, Verdana, sans-serif
 }
 .browser-bar {
-    background: #e0e0e0;
+    background: #e0e0e0ec;
     padding: 12px 20px;
     align-items: center;
 }
 .header-container{
     padding: 20px 40px;
     background-color: white;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.header-container h1{
+    font-size: 49px;
+}
+
+.about-section{
+    display: flex;
+    flex-direction:row;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+.img-container{ /*not used*/
+    
+}
+.img-container img{
+    width: 300px;
+}
+
+.header-text{
+    padding-left: 50px;
+    padding-right: 20px;
+    border: 3px;
+    width: 80%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.header-text h3{
+    font-size: 30px;
 }
